# MyHealthGuide

./: .dockerignore  .editorconfig  .env.1p  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose-up.sh  docker-compose.yml  fix_import.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  rust.yml
MyHealthGuide-api/: Cargo.toml
MyHealthGuide-api/src/: lib.rs  main.rs
MyHealthGuide-api/src/api/: mod.rs  routes.rs  routes_tests.rs
MyHealthGuide-api/src/api/handlers/: blood_pressure.rs  health.rs  mod.rs
MyHealthGuide-api/src/api/handlers/tests/: blood_pressure_test.rs  health_test.rs  mod.rs
MyHealthGuide-api/src/entities/: auth.rs  blood_pressure.rs  common.rs  mod.rs  weight.rs
MyHealthGuide-api/src/openapi/: mod.rs
MyHealthGuide-data/: Cargo.toml
MyHealthGuide-data/src/: lib.rs
MyHealthGuide-data/src/database/: connection.rs  mod.rs
MyHealthGuide-data/src/database/migrations/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
MyHealthGuide-data/src/models/: blood_pressure.rs  mod.rs
MyHealthGuide-data/src/repository/: README.md  blood_pressure.rs  errors.rs  in_memory.rs  mod.rs  storage.rs
MyHealthGuide-domain/: Cargo.toml
MyHealthGuide-domain/src/: lib.rs
MyHealthGuide-domain/src/auth/: auth0.rs  authorize.rs  logging.rs  mod.rs  oidc.rs  oidc_tests.rs  routes.rs  routes_tests.rs  token.rs  token_blacklist.rs
MyHealthGuide-domain/src/entities/: blood_pressure.rs  conversions.rs  mod.rs
MyHealthGuide-domain/src/health/: mod.rs
MyHealthGuide-domain/src/models/: blood_pressure.rs  mod.rs
MyHealthGuide-domain/src/services/: blood_pressure.rs  insights.rs  mod.rs
MyHealthGuide-domain/src/testing/: README.md  mod.rs
docs/: AUTH-LOGGING-README.md  DOCKER_GUIDE.md  OIDC-TROUBLESHOOTING.md  README-AUTH0.md  ROADMAP.md  auth0-fixes.md
scripts/: docker-entrypoint.sh  docker-healthcheck.sh
tests/: api_tests.rs  app_tests.rs  database_tests.rs
