[workspace]
members = [
    "MyHealthGuide-domain",
    "MyHealthGuide-data",
    "MyHealthGuide-api",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
rusqlite = { version = "0.29", features = ["bundled"] }

# Authentication dependencies
jsonwebtoken = "9.1"
jwt-simple = "0.11.5"
oauth2 = "4.4"
openidconnect = { version = "3.4", features = ["reqwest", "accept-rfc3339-timestamps"] }

# API documentation
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Other dependencies
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "API server for the MyHealthGuide application"
license = "MIT"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
