[package]
name = "MyHealthGuide-data"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

# Database dependencies
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Internal dependencies
# MyHealthGuide-domain = { path = "../MyHealthGuide-domain" }

# Core database dependencies
r2d2 = { workspace = true }

# SQLite dependencies
r2d2_sqlite = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

# MySQL dependencies - optional
mysql = { version = "24.0", optional = true }
r2d2_mysql = { version = "24.0", optional = true }

# PostgreSQL dependencies - optional
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.10", optional = true }

# Utilities
async-trait = "0.1.77"
once_cell = "1.19"

[features]
default = ["sqlite"]
sqlite = ["r2d2_sqlite", "rusqlite"]
postgres = ["tokio-postgres", "deadpool-postgres", "dep:tokio"]
mysql_db = ["mysql", "r2d2_mysql"]
mock = [] # Feature for testing with mock implementations 